--- a/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_data_collection_rules.yaml
+++ b/src/azure-cli/azure/cli/command_modules/monitor/tests/latest/recordings/test_monitor_log_analytics_workspace_data_collection_rules.yaml
@@ -7,82 +7,31 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - monitor data-collection rule show
-      Connection:
-      - keep-alive
-      ParameterSetName:
-      - -g -n
-      User-Agent:
-      - AZURECLI/2.50.0 azsdk-python-mgmt-monitor/1.0.0b1 Python/3.10.6 (macOS-13.4.1-x86_64-i386-64bit)
-    method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11?api-version=2021-09-01-preview
-  response:
-    body:
-      string: '{"properties":{"immutableId":"dcr-431db915b50b4e76bfdf22d245f38a36","dataSources":{"performanceCounters":[{"streams":["Microsoft-InsightsMetrics"],"samplingFrequencyInSeconds":60,"counterSpecifiers":["\\Processor
-        Information(_Total)\\% Processor Time"],"name":"perfCounter01"}]},"destinations":{"logAnalytics":[{"workspaceResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/microsoft.operationalinsights/workspaces/wsn1","workspaceId":"08ce4007-5313-4638-8f38-c7ff8ed220cc","name":"wsn1"}],"azureMonitorMetrics":{"name":"azureMonitorMetrics-default"}},"dataFlows":[{"streams":["Microsoft-InsightsMetrics"],"destinations":["azureMonitorMetrics-default"]}],"provisioningState":"Succeeded"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11","name":"rule11","type":"Microsoft.Insights/dataCollectionRules","etag":"\"ac00e471-0000-0700-0000-64be26d80000\"","systemData":{"createdBy":"liwang3@microsoft.com","createdByType":"User","createdAt":"2023-07-24T07:23:02.3778623Z","lastModifiedBy":"liwang3@microsoft.com","lastModifiedByType":"User","lastModifiedAt":"2023-07-24T07:23:02.3778623Z"}}'
-    headers:
-      api-supported-versions:
-      - 2019-11-01-preview, 2021-04-01, 2021-09-01-preview, 2022-06-01, 2023-03-11
-      cache-control:
-      - no-cache
-      content-length:
-      - '1238'
-      content-type:
-      - application/json; charset=utf-8
-      date:
-      - Mon, 24 Jul 2023 07:27:20 GMT
-      expires:
-      - '-1'
-      pragma:
-      - no-cache
-      request-context:
-      - appId=cid-v1:2bbfbac8-e1b0-44af-b9c6-3a40669d37e3
-      server:
-      - Microsoft-HTTPAPI/2.0
-      strict-transport-security:
-      - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding,Accept-Encoding
-      x-content-type-options:
-      - nosniff
-    status:
-      code: 200
-      message: OK
-- request:
-    body: null
-    headers:
-      Accept:
-      - application/json
-      Accept-Encoding:
-      - gzip, deflate
-      CommandName:
       - monitor log-analytics workspace update
       Connection:
       - keep-alive
       ParameterSetName:
       - -g -n --data-collection-rule
       User-Agent:
-      - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.6 (macOS-13.4.1-x86_64-i386-64bit)
+      - AZURECLI/2.59.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1?api-version=2022-10-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"08ce4007-5313-4638-8f38-c7ff8ed220cc","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-07-24T07:10:16.0301603Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-07-24T22:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-07-24T07:10:16.0301603Z","modifiedDate":"2023-07-24T07:23:27.7118374Z","defaultDataCollectionRuleResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"0a00eb0e-0000-0700-0000-64be23da0000\""}'
+      string: '{"properties":{"customerId":"d8cd7529-0c44-4d52-ac05-79a617c0a2f4","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-04-16T06:13:02.4926861Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":1.0,"quotaNextResetTime":"2024-04-16T13:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-04-16T06:13:02.4926861Z","modifiedDate":"2024-04-16T07:22:37.758097Z","defaultDataCollectionRuleResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"0601c95e-0000-0700-0000-661e273e0000\""}'
     headers:
       access-control-allow-origin:
       - '*'
       api-supported-versions:
-      - 2015-03-20, 2020-08-01, 2020-10-01, 2021-06-01, 2022-10-01
+      - 2015-03-20, 2020-08-01, 2020-10-01, 2021-06-01, 2022-10-01, 2023-09-01
       cache-control:
       - no-cache
       content-length:
-      - '1026'
+      - '1024'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 07:27:24 GMT
+      - Tue, 16 Apr 2024 08:17:30 GMT
       expires:
       - '-1'
       pragma:
@@ -91,23 +40,21 @@ interactions:
       - appId=cid-v1:e6336c63-aab2-45f0-996a-e5dbab2a1508
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
-      x-powered-by:
-      - ASP.NET
+      x-msedge-ref:
+      - 'Ref A: E83E377EC76945CA880D8E3BA1235609 Ref B: MAA201060516019 Ref C: 2024-04-16T08:17:30Z'
     status:
       code: 200
       message: OK
 - request:
-    body: '{"etag": "\"0a00eb0e-0000-0700-0000-64be23da0000\"", "location": "westus",
+    body: '{"etag": "\"0601c95e-0000-0700-0000-661e273e0000\"", "location": "westus",
       "properties": {"defaultDataCollectionRuleResourceId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11",
       "features": {"enableLogAccessUsingOnlyResourcePermissions": true}, "publicNetworkAccessForIngestion":
       "Enabled", "publicNetworkAccessForQuery": "Enabled", "retentionInDays": 30,
-      "sku": {"name": "PerGB2018"}, "workspaceCapping": {"dailyQuotaGb": -1.0}}}'
+      "sku": {"name": "PerGB2018"}, "workspaceCapping": {"dailyQuotaGb": 1.0}}}'
     headers:
       Accept:
       - application/json
@@ -118,31 +65,31 @@ interactions:
       Connection:
       - keep-alive
       Content-Length:
-      - '514'
+      - '513'
       Content-Type:
       - application/json
       ParameterSetName:
       - -g -n --data-collection-rule
       User-Agent:
-      - AZURECLI/2.50.0 (AAZ) azsdk-python-core/1.26.0 Python/3.10.6 (macOS-13.4.1-x86_64-i386-64bit)
+      - AZURECLI/2.59.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.19045-SP0)
     method: PUT
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1?api-version=2022-10-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"08ce4007-5313-4638-8f38-c7ff8ed220cc","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2023-07-24T07:10:16.0301603Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2023-07-24T22:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2023-07-24T07:10:16.0301603Z","modifiedDate":"2023-07-24T07:27:26.2533199Z","defaultDataCollectionRuleResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"0a005a27-0000-0700-0000-64be26ef0000\""}'
+      string: '{"properties":{"customerId":"d8cd7529-0c44-4d52-ac05-79a617c0a2f4","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-04-16T06:13:02.4926861Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":1.0,"quotaNextResetTime":"2024-04-16T13:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-04-16T06:13:02.4926861Z","modifiedDate":"2024-04-16T08:17:32.048614Z","defaultDataCollectionRuleResourceId":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.Insights/dataCollectionRules/rule11"},"location":"westus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/tbtest/providers/Microsoft.OperationalInsights/workspaces/wsn1","name":"wsn1","type":"Microsoft.OperationalInsights/workspaces","etag":"\"0601fdf0-0000-0700-0000-661e341c0000\""}'
     headers:
       access-control-allow-origin:
       - '*'
       api-supported-versions:
-      - 2015-03-20, 2020-08-01, 2020-10-01, 2021-06-01, 2022-10-01
+      - 2015-03-20, 2020-08-01, 2020-10-01, 2021-06-01, 2022-10-01, 2023-09-01
       cache-control:
       - no-cache
       content-length:
-      - '1026'
+      - '1024'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 24 Jul 2023 07:27:25 GMT
+      - Tue, 16 Apr 2024 08:17:32 GMT
       expires:
       - '-1'
       pragma:
@@ -151,16 +98,14 @@ interactions:
       - appId=cid-v1:e6336c63-aab2-45f0-996a-e5dbab2a1508
       strict-transport-security:
       - max-age=31536000; includeSubDomains
-      transfer-encoding:
-      - chunked
-      vary:
-      - Accept-Encoding
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
-      x-powered-by:
-      - ASP.NET
+      x-msedge-ref:
+      - 'Ref A: 37B808574EF042989D83DA5698810D22 Ref B: MAA201060516019 Ref C: 2024-04-16T08:17:31Z'
     status:
       code: 200
       message: OK
