All tests and linters should pass now

--- a/linter_exclusions.yml
+++ b/linter_exclusions.yml
@@ -959,6 +959,12 @@ backup vault update:
     cross_subscription_restore_state:
       rule_exclusions:
       - option_length_too_long
+    backup_storage_redundancy:
+      rule_exclusions:
+      - option_length_too_long
+    cross_region_restore_flag:
+      rule_exclusions:
+      - option_length_too_long
 backup vault create:
   parameters:
     cross_subscription_restore_state:
