--- a/src/azure-cli/azure/cli/command_modules/acr/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acr/linter_exclusions.yml
@@ -11,5 +11,7 @@ acr update:
         allow_trusted_services:
             rule_exclusions:
             - option_length_too_long
-
+acr connected-registry update:
+    rule_exclusions:
+    - missing_command_test_coverage
 ...
