[AKS] Add --disable-windows-outbound-nat for az aks nodepool add to add a Windows agent pool which the Windows OutboundNAT is disabled

--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -132,4 +132,9 @@ aks update:
       azure_container_storage_nodepools:
         rule_exclusions:
         - option_length_too_long
+aks nodepool add:
+  parameters:
+      disable_windows_outbound_nat:
+        rule_exclusions:
+        - option_length_too_long
 ...
