--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -61,6 +61,9 @@ aks create:
       azure_monitor_private_link_scope_resource_id:
         rule_exclusions:
         - option_length_too_long
+      enable_high_log_scale_mode:
+        rule_exclusions:
+        - option_length_too_long
 
 aks enable-addons:
   parameters:
@@ -74,6 +77,9 @@ aks enable-addons:
           rule_exclusions:
           - option_length_too_long
       azure_monitor_private_link_scope_resource_id:
+        rule_exclusions:
+        - option_length_too_long
+      enable_high_log_scale_mode:
         rule_exclusions:
         - option_length_too_long
 aks update:
