--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -145,6 +145,11 @@ aks update:
         rule_exclusions:
         - option_length_too_long
       azure_monitor_private_link_scope_resource_id:
+        rule_exclusions:
+        - option_length_too_long
+      enable_high_log_scale_mode:
+        rule_exclusions:
+        - option_length_too_long
 aks nodepool add:
   parameters:
       disable_windows_outbound_nat:
