--- a/src/azure-cli/requirements.py3.windows.txt
+++ b/src/azure-cli/requirements.py3.windows.txt
@@ -66,7 +66,7 @@ azure-mgmt-recoveryservices==3.0.0
 azure-mgmt-recoveryservicesbackup==9.1.0
 azure-mgmt-redhatopenshift==1.4.0
 azure-mgmt-redis==14.3.0
-azure-mgmt-resource==23.1.0b2
+azure-mgmt-resource==23.1.0
 azure-mgmt-search==9.0.0
 azure-mgmt-security==5.0.0
 azure-mgmt-servicebus==8.2.0
