--- a/src/azure-cli/azure/cli/command_modules/netappfiles/tests/latest/recordings/test_check_quota_availability.yaml
+++ b/src/azure-cli/azure/cli/command_modules/netappfiles/tests/latest/recordings/test_check_quota_availability.yaml
@@ -18,7 +18,7 @@ interactions:
       ParameterSetName:
       - -g -l --type --name
       User-Agent:
-      - AZURECLI/2.59.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.60.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.22631-SP0)
     method: POST
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.NetApp/locations/westus2/checkQuotaAvailability?api-version=2023-11-01
   response:
@@ -32,19 +32,21 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 Apr 2024 15:51:02 GMT
+      - Tue, 07 May 2024 15:07:57 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
-      server:
-      - Microsoft-IIS/10.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
+      x-msedge-ref:
+      - 'Ref A: E49116FFAC034A1AA735F79C50F32433 Ref B: AMS231020614039 Ref C: 2024-05-07T15:07:56Z'
       x-powered-by:
       - ASP.NET
     status:
