--- a/src/azure-cli/azure/cli/command_modules/netappfiles/tests/latest/recordings/test_region_info_show.yaml
+++ b/src/azure-cli/azure/cli/command_modules/netappfiles/tests/latest/recordings/test_region_info_show.yaml
@@ -7,37 +7,39 @@ interactions:
       Accept-Encoding:
       - gzip, deflate
       CommandName:
-      - netappfiles resource region-info list
+      - netappfiles resource region-info default show
       Connection:
       - keep-alive
       ParameterSetName:
       - -l
       User-Agent:
-      - AZURECLI/2.59.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.22631-SP0)
+      - AZURECLI/2.60.0 azsdk-python-core/1.28.0 Python/3.10.11 (Windows-10-10.0.22631-SP0)
     method: GET
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.NetApp/locations/westus2/regionInfos?api-version=2023-11-01
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.NetApp/locations/westus2/regionInfos/default?api-version=2023-11-01
   response:
     body:
-      string: '{"value":[{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.NetApp/locations/westus2/regionInfos/default","name":"westus2/default","type":"Microsoft.NetApp/locations/regionInfos","properties":{"storageToNetworkProximity":"T1AndT2AndAcrossT2","availabilityZoneMappings":[{"availabilityZone":"1","isAvailable":true},{"availabilityZone":"2","isAvailable":true},{"availabilityZone":"3","isAvailable":true}]}}]}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.NetApp/locations/westus2/regionInfos/default","name":"westus2/default","type":"Microsoft.NetApp/locations/regionInfos","properties":{"storageToNetworkProximity":"T1AndT2AndAcrossT2","availabilityZoneMappings":[{"availabilityZone":"1","isAvailable":true},{"availabilityZone":"2","isAvailable":true},{"availabilityZone":"3","isAvailable":true}]}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '435'
+      - '423'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 22 Apr 2024 15:51:02 GMT
+      - Tue, 07 May 2024 15:07:58 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
-      server:
-      - Microsoft-IIS/10.0
       strict-transport-security:
       - max-age=31536000; includeSubDomains
+      x-cache:
+      - CONFIG_NOCACHE
       x-content-type-options:
       - nosniff
+      x-msedge-ref:
+      - 'Ref A: 2269793886554C8B8D6F4B3F1DA50A91 Ref B: AMS231020512039 Ref C: 2024-05-07T15:07:58Z'
       x-powered-by:
       - ASP.NET
     status:
