--- a/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/acs/linter_exclusions.yml
@@ -58,7 +58,7 @@ aks create:
       node_resource_group:
         rule_exclusions:
         - parameter_should_not_end_in_resource_group
-      azure_monitor_private_link_scope_resource_id:
+      ampls_resource_id:
         rule_exclusions:
         - option_length_too_long
       enable_high_log_scale_mode:
@@ -76,7 +76,7 @@ aks enable-addons:
       disable_secret_rotation:
           rule_exclusions:
           - option_length_too_long
-      azure_monitor_private_link_scope_resource_id:
+      ampls_resource_id:
         rule_exclusions:
         - option_length_too_long
       enable_high_log_scale_mode:
@@ -144,7 +144,7 @@ aks update:
       azure_container_storage_nodepools:
         rule_exclusions:
         - option_length_too_long
-      azure_monitor_private_link_scope_resource_id:
+      ampls_resource_id:
         rule_exclusions:
         - option_length_too_long
       enable_high_log_scale_mode:
