shorten param and add to linter_exclusions.yml

--- a/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/vm/linter_exclusions.yml
@@ -56,6 +56,12 @@ vmss create:
         disable_integrity_monitoring_autoupgrade:
             rule_exclusions:
                 - option_length_too_long
+        enable_resilient_creation:
+            rule_exclusions:
+                - option_length_too_long
+        enable_resilient_deletion:
+            rule_exclusions:
+                - option_length_too_long
 vmss update:
     parameters:
         enable_cross_zone_upgrade:
@@ -80,6 +86,12 @@ vmss update:
             rule_exclusions:
                 - option_length_too_long
         enable_osimage_notification:
+            rule_exclusions:
+                - option_length_too_long
+        enable_resilient_creation:
+            rule_exclusions:
+                - option_length_too_long
+        enable_resilient_deletion:
             rule_exclusions:
                 - option_length_too_long
 vmss encryption enable:
