Removed the extra code from all the relevant add.py and create.py files

--- a/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_nw_connection_monitor_v2_output1.yaml
+++ b/src/azure-cli/azure/cli/command_modules/network/tests/latest/recordings/test_nw_connection_monitor_v2_output1.yaml
@@ -24,7 +24,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/connection_monitor_v2_test_000001/providers/Microsoft.OperationalInsights/workspaces/clitest000002?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"5a8e0793-7e29-455d-ac5c-bf0c5f841858","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-06-03T07:25:25.7345467Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-06-03T22:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-06-03T07:25:25.7345467Z","modifiedDate":"2024-06-03T07:25:25.7345467Z"},"location":"eastus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/connection_monitor_v2_test_000001/providers/Microsoft.OperationalInsights/workspaces/clitest000002","name":"clitest000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e002ea40-0000-0100-0000-665d6fe50000\""}'
+      string: '{"properties":{"customerId":"30e67de7-871e-476e-a9ea-a0ad303d8c6b","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-06-03T10:27:19.9451071Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-06-03T14:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-06-03T10:27:19.9451071Z","modifiedDate":"2024-06-03T10:27:19.9451071Z"},"location":"eastus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/connection_monitor_v2_test_000001/providers/Microsoft.OperationalInsights/workspaces/clitest000002","name":"clitest000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e30264bb-0000-0100-0000-665d9a870000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -37,7 +37,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 03 Jun 2024 07:25:26 GMT
+      - Mon, 03 Jun 2024 10:27:20 GMT
       expires:
       - '-1'
       location:
@@ -55,7 +55,7 @@ interactions:
       x-ms-ratelimit-remaining-subscription-writes:
       - '1199'
       x-msedge-ref:
-      - 'Ref A: F1195677061E457EA54D9E0624540886 Ref B: MAA201060515023 Ref C: 2024-06-03T07:25:23Z'
+      - 'Ref A: 4508A706A7B24E0AB41AD2312A326B62 Ref B: MAA201060513017 Ref C: 2024-06-03T10:27:16Z'
     status:
       code: 201
       message: Created
@@ -78,7 +78,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/connection_monitor_v2_test_000001/providers/Microsoft.OperationalInsights/workspaces/clitest000002?api-version=2023-09-01
   response:
     body:
-      string: '{"properties":{"customerId":"5a8e0793-7e29-455d-ac5c-bf0c5f841858","provisioningState":"Creating","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-06-03T07:25:25.7345467Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-06-03T22:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-06-03T07:25:25.7345467Z","modifiedDate":"2024-06-03T07:25:25.7345467Z"},"location":"eastus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/connection_monitor_v2_test_000001/providers/Microsoft.OperationalInsights/workspaces/clitest000002","name":"clitest000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e002ea40-0000-0100-0000-665d6fe50000\""}'
+      string: '{"properties":{"customerId":"30e67de7-871e-476e-a9ea-a0ad303d8c6b","provisioningState":"Succeeded","sku":{"name":"PerGB2018","lastSkuUpdate":"2024-06-03T10:27:19.9451071Z"},"retentionInDays":30,"features":{"legacy":0,"searchVersion":1,"enableLogAccessUsingOnlyResourcePermissions":true},"workspaceCapping":{"dailyQuotaGb":-1.0,"quotaNextResetTime":"2024-06-03T14:00:00Z","dataIngestionStatus":"RespectQuota"},"publicNetworkAccessForIngestion":"Enabled","publicNetworkAccessForQuery":"Enabled","createdDate":"2024-06-03T10:27:19.9451071Z","modifiedDate":"2024-06-03T10:27:21.0642085Z"},"location":"eastus","id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/connection_monitor_v2_test_000001/providers/Microsoft.OperationalInsights/workspaces/clitest000002","name":"clitest000002","type":"Microsoft.OperationalInsights/workspaces","etag":"\"e3027ebb-0000-0100-0000-665d9a890000\""}'
     headers:
       access-control-allow-origin:
       - '*'
@@ -87,11 +87,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '900'
+      - '901'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Mon, 03 Jun 2024 07:25:26 GMT
+      - Mon, 03 Jun 2024 10:27:21 GMT
       expires:
       - '-1'
       pragma:
@@ -105,7 +105,7 @@ interactions:
       x-content-type-options:
       - nosniff
       x-msedge-ref:
-      - 'Ref A: C3FCF195209B45FABCE616B8C1004A25 Ref B: MAA201060515023 Ref C: 2024-06-03T07:25:26Z'
+      - 'Ref A: ECBA999F72614CB6B81793E072CE7BFE Ref B: MAA201060513017 Ref C: 2024-06-03T10:27:20Z'
     status:
       code: 200
       message: OK
