--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -23,7 +23,7 @@
 /src/azure-cli/azure/cli/command_modules/acs/ @zhoxing-ms @zqingqing1 @gtracer @xizhamsft @andyliuliming @fumingzhang @jsntcy @yanzhudd
 /src/azure-cli/azure/cli/command_modules/advisor/ @Prasanna-Padmanabhan
 /src/azure-cli/azure/cli/command_modules/apim/ @kevinhillinger @jonlester
-/src/azure-cli/azure/cli/command_modules/appconfig/ @albertofori @avanigupta @zhoxing-ms @jsntcy @yanzhudd
+/src/azure-cli/azure/cli/command_modules/appconfig/ @ChristineWanjau @albertofori @avanigupta @zhoxing-ms @jsntcy @yanzhudd
 /src/azure-cli/azure/cli/command_modules/appservice/ @panchagnula @jsntcy @zhoxing-ms @yanzhudd
 /src/azure-cli/azure/cli/command_modules/aro/ @bennerv @hawkowl @jewzaam @rogbas
 /src/azure-cli/azure/cli/command_modules/backup/ @dragonfly91 @zhoxing-ms @akshayneema @jsntcy @yanzhudd
