--- a/azure-pipelines-full-tests.yml
+++ b/azure-pipelines-full-tests.yml
@@ -174,3 +174,4 @@ jobs:
       PROJECT_TYPE: $(System.TeamProject)
       BUILD_ID: $(Build.BuildId)
       JOB_ID: $(System.JobId)
+    enabled: false
