--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1206,6 +1206,7 @@ jobs:
       KUSTO_DATABASE: $(KUSTO_DATABASE)
       KUSTO_TABLE: $(KUSTO_TABLE)
       KUSTO_TENANT_ID: $(KUSTO_TENANT_ID)
+    enabled: false
 
 #- job: VerifySphinxDocumentGenerator
 #  displayName: "Verify Sphinx Document Generator"
@@ -1286,3 +1287,4 @@ jobs:
       PROJECT_TYPE: $(System.TeamProject)
       BUILD_ID: $(Build.BuildId)
       JOB_ID: $(System.JobId)
+    enabled: false
