--- a/azure-pipelines-test.yml
+++ b/azure-pipelines-test.yml
@@ -35,4 +35,4 @@ jobs:
     name: ${{ variables.ubuntu_pool }}
   steps:
   - bash: |
-      echo "Check Title of Pull Request: #$(System.PullRequest.PullRequestNumber)"
+      echo "Check the Title of Pull Request: #$(System.PullRequest.PullRequestNumber)"
