Printing the value of TC to debug

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "args": [
                 // "network", "watcher", "packet-capture", "show-status", "--name", "kumaamtestpc", "--location", "eastus"
            //   "network", "watcher", "connection-monitor", "output", "add", "--type", "Workspace", "--workspace-id", "/subscriptions/9cece3e3-0f7d-47ca-af0e-9772773f90b7/resourcegroups/mms-wcus/providers/microsoft.operationalinsights/workspaces/accessibilitytesting"
-            "network", "watcher", "connection-monitor", "test-configuration", "add", "--name", "myTC", "--frequency", "60", "--protocol", "Http", "--http-method", "Get", "--http-valid-status-codes", "[200,201]", "--http-port", "80", "--http-request-headers", "[{'name':'UserAgent','value':'Edge'},{'name':'name2','value':'value2'}]"
+            "network", "watcher", "connection-monitor", "test-configuration", "add", "--name", "myTC", "--frequency", "60", "--protocol", "Tcp", "--preferred-ip-version", "IPv4", "--tcp-port", "80"
                // "network", "watcher", "packet-capture", "show-status", "--name", "kumaamtestpc", "--location", "eastus"
            // "network", "watcher", "connection-monitor", "endpoint", "add", "--name", "CdmTest", "--type", "AzureVM", "--resource-id", "/subscriptions/9cece3e3-0f7d-47ca-af0e-9772773f90b7/resourceGroups/srisa-rg/providers/Microsoft.Compute/virtualMachines/CdmTest", "--scope-exclude", "[{'address':'10.0.0.25'},{'address':'10.0.0.30'}]", "--coverage-level", "BelowAverage"
           //  "network", "watcher", "connection-monitor", "endpoint", "add", "--name", "CdmTest", "--type", "AzureVM", "--resource-id", "/subscriptions/9cece3e3-0f7d-47ca-af0e-9772773f90b7/resourceGroups/srisa-rg/providers/Microsoft.Compute/virtualMachines/CdmTest"
