--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,9 +12,9 @@
 /scripts/live_test @kairu-ms @wangzelin007
 /src/azure-cli-testsdk/ @jsntcy @jiasli @kairu-ms @wangzelin007
 
-/src/azure-cli-core/ @jiasli @evelyn-ys @jsntcy @kairu-ms @zhoxing-ms @calvinhzy @necusjz
+/src/azure-cli-core/ @jiasli @evelyn-ys @jsntcy @kairu-ms @zhoxing-ms @calvinhzy @necusjz @bebound
 /src/azure-cli-core/azure/cli/core/_profile.py @jiasli @evelyn-ys @calvinhzy
-/src/azure-cli-core/azure/cli/core/auth/ @jiasli @evelyn-ys @calvinhzy
+/src/azure-cli-core/azure/cli/core/auth/ @jiasli @evelyn-ys @calvinhzy @bebound
 /src/azure-cli-core/azure/cli/core/extension/ @jsntcy @kairu-ms
 /src/azure-cli-core/azure/cli/core/style.py @jiasli @evelyn-ys @zhoxing-ms
 /src/azure-cli-core/azure/cli/core/aaz/ @kairu-ms @necusjz @calvinhzy @jsntcy
