--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -13,7 +13,7 @@
 /src/azure-cli-testsdk/ @jsntcy @jiasli @kairu-ms @wangzelin007
 
 /src/azure-cli-core/ @jiasli @evelyn-ys @jsntcy @kairu-ms @zhoxing-ms @calvinhzy @necusjz @bebound
-/src/azure-cli-core/azure/cli/core/_profile.py @jiasli @evelyn-ys @calvinhzy
+/src/azure-cli-core/azure/cli/core/_profile.py @jiasli @evelyn-ys @calvinhzy @bebound
 /src/azure-cli-core/azure/cli/core/auth/ @jiasli @evelyn-ys @calvinhzy @bebound
 /src/azure-cli-core/azure/cli/core/extension/ @jsntcy @kairu-ms
 /src/azure-cli-core/azure/cli/core/style.py @jiasli @evelyn-ys @zhoxing-ms
@@ -52,10 +52,10 @@
 /src/azure-cli/azure/cli/command_modules/network/ @jsntcy @kairu-ms @wangzelin007 @necusjz
 /src/azure-cli/azure/cli/command_modules/policyinsights/ @cheggert
 /src/azure-cli/azure/cli/command_modules/privatedns/ @jsntcy @kairu-ms @necusjz
-/src/azure-cli/azure/cli/command_modules/profile/ @jiasli @evelyn-ys @calvinhzy
+/src/azure-cli/azure/cli/command_modules/profile/ @jiasli @evelyn-ys @calvinhzy @bebound
 /src/azure-cli/azure/cli/command_modules/rdbms/ @arde0708 @evelyn-ys @calvinhzy @alanenriqueo
 /src/azure-cli/azure/cli/command_modules/resource/ @zhoxing-ms @jsntcy @yanzhudd
-/src/azure-cli/azure/cli/command_modules/role/ @jiasli @evelyn-ys @calvinhzy
+/src/azure-cli/azure/cli/command_modules/role/ @jiasli @evelyn-ys @calvinhzy @bebound
 /src/azure-cli/azure/cli/command_modules/search/ @huangbolun @kairu-ms
 /src/azure-cli/azure/cli/command_modules/servicebus/ @v-ajnava @zhoxing-ms @jsntcy @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/serviceconnector/ @yungezz @houk-ms @xfz11 @yanzhudd @kairu-ms
